added static modals on gallery page with slider on banner at top

--- a/public/gallery.html
+++ b/public/gallery.html
@@ -35,70 +35,347 @@
     </div>
 
     <div class="container" style="margin-top:35px">
+        <div class="slider">
+            <ul class="slides">
+                <li><img src="images/1.jpg">
+                </li>
+                <li><img src="images/2.jpg">
+                </li>
+                <li><img src="images/3.jpg">
+                </li>
+                <li><img src="images/4.jpg">
+                </li>
+                <li><img src="images/5.jpg">
+                </li>
+                <li><img src="images/6.jpg">
+                </li>
+                <li><img src="images/7.jpg">
+                </li>
+                <li><img src="images/8.jpg">
+                </li>
+                <li><img src="images/9.jpg">
+                </li>
+                <li><img src="images/10.jpg">
+                </li>
+                <li><img src="images/11.jpg">
+                </li>
+                <li><img src="images/12.jpg">
+                </li>
+                <li><img src="images/13.jpg">
+                </li>
+                <li><img src="images/14.jpg">
+                </li>
+                <li><img src="images/15.jpg">
+                </li>
+                <li><img src="images/16.jpg">
+                </li>
+                <li><img src="images/17.jpg">
+                </li>
+                <li><img src="images/18.jpg">
+                </li>
+                <li><img src="images/19.jpg">
+                </li>
+                <li><img src="images/20.jpg">
+                </li>
+                <li><img src="images/21.jpg">
+                </li>
+                <li><img src="images/22.jpg">
+                </li>
+                <li><img src="images/23.jpg">
+                </li>
+                <li><img src="images/24.jpg">
+                </li>
+                <li><img src="images/25.jpg">
+                </li>
+                <li><img src="images/26.jpg">
+                </li>
+                <li><img src="images/27.jpg">
+                </li>
+                <li><img src="images/28.jpg">
+                </li>
+                <li><img src="images/29.jpg">
+                </li>
+                <li><img src="images/30.jpg">
+                </li>
+                <li><img src="images/31.jpg">
+                </li>
+                <li><img src="images/32.jpg">
+                </li>
+                <li><img src="images/33.jpg">
+                </li>
+                <li><img src="images/34.jpg">
+                </li>
+                <li><img src="images/35.jpg">
+                </li>
+                <li><img src="images/36.jpg">
+                </li>
+                <li><img src="images/37.jpg">
+                </li>
+                <li><img src="images/38.jpg">
+                </li>
+                <li><img src="images/39.jpg">
+                </li>
+                <li><img src="images/40.jpg">
+                </li>
+                <li><img src="images/41.jpg">
+                </li>
+            </ul>  
+        </div>
+    
+    </div>
 
-        <!-- Modal Trigger -->
-        <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>
+    <div class="container" style="margin-top:35px">
+        <div class="row">
 
-        <!-- Modal Structure -->
-        <div id="modal1" class="modal modal-fixed-footer">
-          <div class="modal-content">
-
-            <div class="slider">
-              <ul class="slides">
-                <li><img src="images/1.jpg"></li>
-                <li><img src="images/2.jpg"></li>
-                <li><img src="images/3.jpg"></li>
-                <li><img src="images/4.jpg"></li>
-                <li><img src="images/5.jpg"></li>
-                <li><img src="images/6.jpg"></li>
-                <li><img src="images/7.jpg"></li>
-                <li><img src="images/8.jpg"></li>
-                <li><img src="images/9.jpg"></li>
-                <li><img src="images/10.jpg"></li>
-                <li><img src="images/11.jpg"></li>
-                <li><img src="images/12.jpg"></li>
-                <li><img src="images/13.jpg"></li>
-                <li><img src="images/14.jpg"></li>
-                <li><img src="images/15.jpg"></li>
-                <li><img src="images/16.jpg"></li>
-                <li><img src="images/17.jpg"></li>
-                <li><img src="images/18.jpg"></li>
-                <li><img src="images/19.jpg"></li>
-                <li><img src="images/20.jpg"></li>
-                <li><img src="images/21.jpg"></li>
-                <li><img src="images/22.jpg"></li>
-                <li><img src="images/23.jpg"></li>
-                <li><img src="images/24.jpg"></li>
-                <li><img src="images/25.jpg"></li>
-                <li><img src="images/26.jpg"></li>
-                <li><img src="images/27.jpg"></li>
-                <li><img src="images/28.jpg"></li>
-                <li><img src="images/29.jpg"></li>
-                <li><img src="images/30.jpg"></li>
-                <li><img src="images/31.jpg"></li>
-                <li><img src="images/32.jpg"></li>
-                <li><img src="images/33.jpg"></li>
-                <li><img src="images/34.jpg"></li>
-                <li><img src="images/35.jpg"></li>
-                <li><img src="images/36.jpg"></li>
-                <li><img src="images/37.jpg"></li>
-                <li><img src="images/38.jpg"></li>
-                <li><img src="images/39.jpg"></li>
-                <li><img src="images/40.jpg"></li>
-                <li><img src="images/40.jpg"></li>
-
-              </ul>
-              <br>
-              <br>
+            <!-- Modal Trigger -->
+            <a class="modal-trigger" href="#modal1"><img class="gallery-thumb col s4 m2" src="images/1.jpg"></a>
+            <a class="modal-trigger" href="#modal2"><img class="gallery-thumb col s4 m2" src="images/2.jpg"></a>
+            <a class="modal-trigger" href="#modal3"><img class="gallery-thumb col s4 m2" src="images/3.jpg"></a>
+            <a class="modal-trigger" href="#modal4"><img class="gallery-thumb col s4 m2" src="images/4.jpg"></a>
+            <a class="modal-trigger" href="#modal5"><img class="gallery-thumb col s4 m2" src="images/5.jpg"></a>
+            <a class="modal-trigger" href="#modal6"><img class="gallery-thumb col s4 m2" src="images/6.jpg"></a>
+            <a class="modal-trigger" href="#modal7"><img class="gallery-thumb col s4 m2" src="images/7.jpg"></a>
+            <a class="modal-trigger" href="#modal8"><img class="gallery-thumb col s4 m2" src="images/8.jpg"></a>
+            <a class="modal-trigger" href="#modal9"><img class="gallery-thumb col s4 m2" src="images/9.jpg"></a>
+            <a class="modal-trigger" href="#modal10"><img class="gallery-thumb col s4 m2" src="images/10.jpg"></a>
+            <a class="modal-trigger" href="#modal11"><img class="gallery-thumb col s4 m2" src="images/11.jpg"></a>
+            <a class="modal-trigger" href="#modal12"><img class="gallery-thumb col s4 m2" src="images/12.jpg"></a>
+            <a class="modal-trigger" href="#modal13"><img class="gallery-thumb col s4 m2" src="images/13.jpg"></a>
+            <a class="modal-trigger" href="#modal14"><img class="gallery-thumb col s4 m2" src="images/14.jpg"></a>
+            <a class="modal-trigger" href="#modal15"><img class="gallery-thumb col s4 m2" src="images/15.jpg"></a>
+            <a class="modal-trigger" href="#modal16"><img class="gallery-thumb col s4 m2" src="images/16.jpg"></a>
+            <a class="modal-trigger" href="#modal17"><img class="gallery-thumb col s4 m2" src="images/17.jpg"></a>
+            <a class="modal-trigger" href="#modal18"><img class="gallery-thumb col s4 m2" src="images/18.jpg"></a>
+            <a class="modal-trigger" href="#modal19"><img class="gallery-thumb col s4 m2" src="images/19.jpg"></a>
+            <a class="modal-trigger" href="#modal20"><img class="gallery-thumb col s4 m2" src="images/20.jpg"></a>
+            <a class="modal-trigger" href="#modal21"><img class="gallery-thumb col s4 m2" src="images/21.jpg"></a>
+            <a class="modal-trigger" href="#modal22"><img class="gallery-thumb col s4 m2" src="images/22.jpg"></a>
+            <a class="modal-trigger" href="#modal23"><img class="gallery-thumb col s4 m2" src="images/23.jpg"></a>
+            <a class="modal-trigger" href="#modal24"><img class="gallery-thumb col s4 m2" src="images/24.jpg"></a>
+            <a class="modal-trigger" href="#modal25"><img class="gallery-thumb col s4 m2" src="images/25.jpg"></a>
+            <a class="modal-trigger" href="#modal26"><img class="gallery-thumb col s4 m2" src="images/26.jpg"></a>
+            <a class="modal-trigger" href="#modal27"><img class="gallery-thumb col s4 m2" src="images/27.jpg"></a>
+            <a class="modal-trigger" href="#modal28"><img class="gallery-thumb col s4 m2" src="images/28.jpg"></a>
+            <a class="modal-trigger" href="#modal29"><img class="gallery-thumb col s4 m2" src="images/29.jpg"></a>
+            <a class="modal-trigger" href="#modal30"><img class="gallery-thumb col s4 m2" src="images/30.jpg"></a>
+            <a class="modal-trigger" href="#modal31"><img class="gallery-thumb col s4 m2" src="images/31.jpg"></a>
+            <a class="modal-trigger" href="#modal32"><img class="gallery-thumb col s4 m2" src="images/32.jpg"></a>
+            <a class="modal-trigger" href="#modal33"><img class="gallery-thumb col s4 m2" src="images/33.jpg"></a>
+            <a class="modal-trigger" href="#modal34"><img class="gallery-thumb col s4 m2" src="images/34.jpg"></a>
+            <a class="modal-trigger" href="#modal35"><img class="gallery-thumb col s4 m2" src="images/35.jpg"></a>
+            <a class="modal-trigger" href="#modal36"><img class="gallery-thumb col s4 m2" src="images/36.jpg"></a>
+            <a class="modal-trigger" href="#modal37"><img class="gallery-thumb col s4 m2" src="images/37.jpg"></a>
+            <a class="modal-trigger" href="#modal38"><img class="gallery-thumb col s4 m2" src="images/38.jpg"></a>
+            <a class="modal-trigger" href="#modal39"><img class="gallery-thumb col s4 m2" src="images/39.jpg"></a>
+            <a class="modal-trigger" href="#modal40"><img class="gallery-thumb col s4 m2" src="images/40.jpg"></a>
+            <a class="modal-trigger" href="#modal41"><img class="gallery-thumb col s4 m2" src="images/41.jpg"></a>
+        </div>
+            <!-- Modal Structure -->
+            <div id="modal1" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <img class="modal-image" src="images/1.jpg">
+                </div>
             </div>
-
-            <div class="col s12 center">
-              <button class="prev z-depth-0 btn blue btn-flat center"><i class="fa fa-chevron-left fa-lg grey-text text-lighten-3">Previous</i></button>
-              <button class="next z-depth-0 btn blue btn-flat center"><i class="fa fa-chevron-right fa-lg grey-text text-lighten-1">Next</i></button>
+            <div id="modal2" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <img class="modal-image" src="images/2.jpg">
+                </div>
             </div>
-
-          </div>  
-
+            <div id="modal3" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <img class="modal-image" src="images/3.jpg">
+                </div>
+            </div>
+            <div id="modal4" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <img class="modal-image" src="images/4.jpg">
+                </div>
+            </div>
+            <div id="modal5" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <img class="modal-image" src="images/5.jpg">
+                </div>
+            </div>
+            <div id="modal6" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <img class="modal-image" src="images/6.jpg">
+                </div>
+            </div>
+            <div id="modal7" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <img class="modal-image" src="images/7.jpg">
+                </div>
+            </div>
+            <div id="modal8" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <img class="modal-image" src="images/8.jpg">
+                </div>
+            </div>
+            <div id="modal9" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <img class="modal-image" src="images/9.jpg">
+                </div>
+            </div>
+            <div id="modal10" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <img class="modal-image" src="images/10.jpg">
+                </div>
+            </div>
+            <div id="modal11" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <img class="modal-image" src="images/11.jpg">
+                </div>
+            </div>
+            <div id="modal12" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <img class="modal-image" src="images/12.jpg">
+                </div>
+            </div>
+            <div id="modal12" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <img class="modal-image" src="images/12.jpg">
+                </div>
+            </div>
+            <div id="modal14" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <img class="modal-image" src="images/14.jpg">
+                </div>
+            </div>
+            <div id="modal15" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <img class="modal-image" src="images/15.jpg">
+                </div>
+            </div>
+            <div id="modal16" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <img class="modal-image" src="images/16.jpg">
+                </div>
+            </div>
+            <div id="modal17" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <img class="modal-image" src="images/17.jpg">
+                </div>
+            </div>
+            <div id="modal18" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <img class="modal-image" src="images/18.jpg">
+                </div>
+            </div>
+            <div id="modal19" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <img class="modal-image" src="images/19.jpg">
+                </div>
+            </div>
+            <div id="modal20" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <img class="modal-image" src="images/20.jpg">
+                </div>
+            </div>
+            <div id="modal21" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <img class="modal-image" src="images/21.jpg">
+                </div>
+            </div>
+            <div id="modal22" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <img class="modal-image" src="images/22.jpg">
+                </div>
+            </div>
+            <div id="modal23" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <img class="modal-image" src="images/23.jpg">
+                </div>
+            </div>
+            <div id="modal24" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <img class="modal-image" src="images/24.jpg">
+                </div>
+            </div>
+            <div id="modal25" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <img class="modal-image" src="images/25.jpg">
+                </div>
+            </div>
+            <div id="modal26" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <img class="modal-image" src="images/26.jpg">
+                </div>
+            </div>
+            <div id="modal27" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <img class="modal-image" src="images/27.jpg">
+                </div>
+            </div>
+            <div id="modal28" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <img class="modal-image" src="images/28.jpg">
+                </div>
+            </div>
+            <div id="modal29" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <img class="modal-image" src="images/29.jpg">
+                </div>
+            </div>
+            <div id="modal30" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <img class="modal-image" src="images/30.jpg">
+                </div>
+            </div>
+            <div id="modal31" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <img class="modal-image" src="images/31.jpg">
+                </div>
+            </div>
+            <div id="modal32" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <img class="modal-image" src="images/32.jpg">
+                </div>
+            </div>
+            <div id="modal33" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <img class="modal-image" src="images/33.jpg">
+                </div>
+            </div>
+            <div id="modal34" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <img class="modal-image" src="images/34.jpg">
+                </div>
+            </div>
+            <div id="modal35" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <img class="modal-image" src="images/35.jpg">
+                </div>
+            </div>
+            <div id="modal36" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <img class="modal-image" src="images/36.jpg">
+                </div>
+            </div>
+            <div id="modal37" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <img class="modal-image" src="images/37.jpg">
+                </div>
+            </div>
+            <div id="modal38" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <img class="modal-image" src="images/38.jpg">
+                </div>
+            </div>
+            <div id="modal39" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <img class="modal-image" src="images/39.jpg">
+                </div>
+            </div>
+            <div id="modal40" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <img class="modal-image" src="images/40.jpg">
+                </div>
+            </div>
+            <div id="modal41" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <img class="modal-image" src="images/41.jpg">
+                </div>
+            </div>
         </div>
 
     </div>
