removed link to floorplan.html while we don't have assets for that page

--- a/public/contactus.html
+++ b/public/contactus.html
@@ -28,10 +28,10 @@
         </nav>
     </div>
     <div class="button-holder row">
-        <a href="gallery.html"><button class="col 3">Gallery</button></a>
-        <a href="floorplan.html"><button class="col 3">Floor Plan</button></a>
-        <a href="details.html"><button class="col 3">Details</button></a>
-        <a href="contactus.html"><button class="col 3">Contact Us</button></a>
+        <a href="gallery.html"><button class="col s4 m4">Gallery</button></a>
+        <!-- <a href="floorplan.html"><button class="col 3">Floor Plan</button></a> -->
+        <a href="details.html"><button class="col s4 m4">Details</button></a>
+        <a href="contactus.html"><button class="col s4 m4">Contact Us</button></a>
     </div>
     <!-- Contact Us -->
     <div class= "container" id="form-wrapper">
