Added serverless form template

--- a/public/contactus.html
+++ b/public/contactus.html
@@ -38,7 +38,7 @@
         <div class="panel panel-primary">
             <div class="panel-body">
                 <!-- Entry Form -->
-                <form>
+                <form method="POST" action="http://serverlessforms.com/api/form/8dacaba4-f055-54cc-b5bd-3d543e006435/form-response">
                     <label for="name-input" required>Name</label>
                     <input class="form-control" id="name-input" type="text">  
                     
