--- a/public/contactus.html
+++ b/public/contactus.html
@@ -61,8 +61,8 @@
     <div class="container">
         <footer class="page-footer" class="container">
             <div class="container">
-                Some more text here
-                <a class="grey-text text-lighten-4 right" href="#!">Company Name here</a>
+                Copyright 841 19th St, Miami Beach, Florida
+                <a class="grey-text text-lighten-4 right" href="https://www.elliman.com" target="_blank">Douglas Elliman, Inc.</a>
             </div>
         </footer>
     </div>
