Added firebase and some styling to contact page

--- a/public/details.html
+++ b/public/details.html
@@ -75,7 +75,7 @@
         <footer class="page-footer" class="container">
             <div class="container">
                 Copyright 841 19th St, Miami Beach, Florida
-                <a class="grey-text text-lighten-4 right" href="https://www.elliman.com" targe="_blank">Douglas Elliman, Inc</a>
+                <a class="grey-text text-lighten-4 right" href="https://www.elliman.com" target="_blank">Douglas Elliman, Inc.</a>
             </div>
         </footer>
     </div>
