--- a/public/gallery.html
+++ b/public/gallery.html
@@ -28,10 +28,10 @@
         </nav>
     </div>
     <div class="button-holder row">
-        <a href="gallery.html"><button class="col s4 m4">Gallery</button></a>
+        <a href="gallery.html"><button class="col s4 m4" id="links">Gallery</button></a>
         <!-- <a href="floorplan.html"><button class="col 3">Floor Plan</button></a> -->
-        <a href="details.html"><button class="col s4 m4">Details</button></a>
-        <a href="contactus.html"><button class="col s4 m4">Contact Us</button></a>
+        <a href="details.html"><button class="col s4 m4" id="links">Details</button></a>
+        <a href="contactus.html"><button class="col s4 m4" id="links">Contact Us</button></a>
     </div>
     <div class="container" style="margin-top:35px">
         <div class="slider">
