--- a/public/contactus.html
+++ b/public/contactus.html
@@ -45,12 +45,12 @@
             <div class="panel-body">
                 <!-- Entry Form -->
                 <form class="col s12 m6">
-                    <label for="name-input" required>Name</label>
+                    <label for="name" required>Name</label>
                     <input class="form-control" placeholder="Name" id="name-input" type="text">  
                     
                     <div class="form-group">
-                    <label for="email-input" required>Email</label>
-                    <input class="form-control" placeholder="me@example.com" id="email-input" type="text">
+                    <label for="emailAddress" required>Email</label>
+                    <input class="form-control" placeholder="me@example.com" id="email-input" type="email">
                     </div>
                     
                     <div class="form-group">
