--- a/public/contactus.html
+++ b/public/contactus.html
@@ -17,6 +17,7 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/jquery.validation/1.15.1/jquery.validate.min.js"></script>
     <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase.js"></script>
    
@@ -44,21 +45,21 @@
         <div class="panel panel-primary s12 m6">
             <div class="panel-body">
                 <!-- Entry Form -->
-                <form class="col s12 m6">
+                <form class="col s12 m6" name="registration">
                     <label for="name" required>Name</label>
-                    <input class="form-control validate" placeholder="Name" id="name-input" type="text" required>  
+                    <input class="form-control validate" placeholder="Name" name="name" id="name-input" type="text" required>  
                     
                     <div class="form-group">
                     <label for="emailAddress" required>Email</label>
-                    <input class="form-control validate" placeholder="me@example.com" id="email-input" type="email" pattern="/^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/" required>
+                    <input class="form-control validate" placeholder="me@example.com" name="email" id="email-input" type="email" required>
                     <span class="helper-text" data-error="Please Enter Valid Email Address" data-success="right"></span>
                     </div>
                     
                     <div class="form-group">
                     <label for="comments-input" required>Questions or Comments</label>
-                    <input class="form-control validate" placeholder="Interested? Let us know!" id="comment-input" type="text" style="height: 100px" required>
+                    <input class="form-control validate" placeholder="Interested? Let us know!" name="comment" id="comment-input" type="text" style="height: 100px" required>
                     </div>
-                    <input type="submit">
+                    <!-- <input type="submit" class="contact-btn"> -->
                     <button class="btn btn-primary" id="add-to-firebase" style= "background-color: #009cbd; width: 33%;" type="submit">Send</button>
                 </form>
                 <br><br>
