commented out button linked to firebase to further test validation. it works, but when firebase is linked it no longer does

--- a/public/details.html
+++ b/public/details.html
@@ -48,7 +48,7 @@
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="s12 m4" style="float: left; text-align: center;">
+                    <div class="col s12 m4" style="float: left; text-align: center;">
                         <h5>Yearly Real Estate Tax: </h5>
                         <p>$55,236</p>
                         <h5>Neighborhood: </h5>
@@ -57,7 +57,7 @@
                         <p>4 Beds | 4 Baths | 1 Half Bath</p>
                     </div>
                     
-                    <div class="s12 m4" style="float: right; text-align: center;">
+                    <div class="col s12 m4" style="float: right; text-align: center;">
                         <h5>Approximate Sq. Feet: </h5>
                         <p>3,725</p>
                         <h5>Lot Size: </h5>
