adjusted modal styling and removed modal-fixed-footer class

--- a/public/gallery.html
+++ b/public/gallery.html
@@ -170,207 +170,207 @@
             <a class="modal-trigger" href="#modal41"><img class="gallery-thumb col s4 m2" src="images/41.jpg"></a>
         </div>
             <!-- Modal Structure -->
-            <div id="modal1" class="modal modal-fixed-footer">
+            <div id="modal1" class="modal">
                 <div class="modal-content">
                     <img class="modal-image" src="images/1.jpg">            
                 </div>
             </div>
-            <div id="modal2" class="modal modal-fixed-footer">
+            <div id="modal2" class="modal">
                 <div class="modal-content">
                     <img class="modal-image" src="images/2.jpg">
                 </div>
             </div>
-            <div id="modal3" class="modal modal-fixed-footer">
+            <div id="modal3" class="modal">
                 <div class="modal-content">
                     <img class="modal-image" src="images/3.jpg">
                 </div>
             </div>
-            <div id="modal4" class="modal modal-fixed-footer">
+            <div id="modal4" class="modal">
                 <div class="modal-content">
                     <img class="modal-image" src="images/4.jpg">
                 </div>
             </div>
-            <div id="modal5" class="modal modal-fixed-footer">
+            <div id="modal5" class="modal">
                 <div class="modal-content">
                     <img class="modal-image" src="images/5.jpg">
                 </div>
             </div>
-            <div id="modal6" class="modal modal-fixed-footer">
+            <div id="modal6" class="modal">
                 <div class="modal-content">
                     <img class="modal-image" src="images/6.jpg">
                 </div>
             </div>
-            <div id="modal7" class="modal modal-fixed-footer">
+            <div id="modal7" class="modal">
                 <div class="modal-content">
                     <img class="modal-image" src="images/7.jpg">
                 </div>
             </div>
-            <div id="modal8" class="modal modal-fixed-footer">
+            <div id="modal8" class="modal">
                 <div class="modal-content">
                     <img class="modal-image" src="images/8.jpg">
                 </div>
             </div>
-            <div id="modal9" class="modal modal-fixed-footer">
+            <div id="modal9" class="modal">
                 <div class="modal-content">
                     <img class="modal-image" src="images/9.jpg">
                 </div>
             </div>
-            <div id="modal10" class="modal modal-fixed-footer">
+            <div id="modal10" class="modal">
                 <div class="modal-content">
                     <img class="modal-image" src="images/10.jpg">
                 </div>
             </div>
-            <div id="modal11" class="modal modal-fixed-footer">
+            <div id="modal11" class="modal">
                 <div class="modal-content">
                     <img class="modal-image" src="images/11.jpg">
                 </div>
             </div>
-            <div id="modal12" class="modal modal-fixed-footer">
+            <div id="modal12" class="modal">
                 <div class="modal-content">
                     <img class="modal-image" src="images/12.jpg">
                 </div>
             </div>
-            <div id="modal12" class="modal modal-fixed-footer">
+            <div id="modal12" class="modal">
                 <div class="modal-content">
                     <img class="modal-image" src="images/12.jpg">
                 </div>
             </div>
-            <div id="modal14" class="modal modal-fixed-footer">
+            <div id="modal14" class="modal">
                 <div class="modal-content">
                     <img class="modal-image" src="images/14.jpg">
                 </div>
             </div>
-            <div id="modal15" class="modal modal-fixed-footer">
+            <div id="modal15" class="modal">
                 <div class="modal-content">
                     <img class="modal-image" src="images/15.jpg">
                 </div>
             </div>
-            <div id="modal16" class="modal modal-fixed-footer">
+            <div id="modal16" class="modal">
                 <div class="modal-content">
                     <img class="modal-image" src="images/16.jpg">
                 </div>
             </div>
-            <div id="modal17" class="modal modal-fixed-footer">
+            <div id="modal17" class="modal">
                 <div class="modal-content">
                     <img class="modal-image" src="images/17.jpg">
                 </div>
             </div>
-            <div id="modal18" class="modal modal-fixed-footer">
+            <div id="modal18" class="modal">
                 <div class="modal-content">
                     <img class="modal-image" src="images/18.jpg">
                 </div>
             </div>
-            <div id="modal19" class="modal modal-fixed-footer">
+            <div id="modal19" class="modal">
                 <div class="modal-content">
                     <img class="modal-image" src="images/19.jpg">
                 </div>
             </div>
-            <div id="modal20" class="modal modal-fixed-footer">
+            <div id="modal20" class="modal">
                 <div class="modal-content">
                     <img class="modal-image" src="images/20.jpg">
                 </div>
             </div>
-            <div id="modal21" class="modal modal-fixed-footer">
+            <div id="modal21" class="modal">
                 <div class="modal-content">
                     <img class="modal-image" src="images/21.jpg">
                 </div>
             </div>
-            <div id="modal22" class="modal modal-fixed-footer">
+            <div id="modal22" class="modal">
                 <div class="modal-content">
                     <img class="modal-image" src="images/22.jpg">
                 </div>
             </div>
-            <div id="modal23" class="modal modal-fixed-footer">
+            <div id="modal23" class="modal">
                 <div class="modal-content">
                     <img class="modal-image" src="images/23.jpg">
                 </div>
             </div>
-            <div id="modal24" class="modal modal-fixed-footer">
+            <div id="modal24" class="modal">
                 <div class="modal-content">
                     <img class="modal-image" src="images/24.jpg">
                 </div>
             </div>
-            <div id="modal25" class="modal modal-fixed-footer">
+            <div id="modal25" class="modal">
                 <div class="modal-content">
                     <img class="modal-image" src="images/25.jpg">
                 </div>
             </div>
-            <div id="modal26" class="modal modal-fixed-footer">
+            <div id="modal26" class="modal">
                 <div class="modal-content">
                     <img class="modal-image" src="images/26.jpg">
                 </div>
             </div>
-            <div id="modal27" class="modal modal-fixed-footer">
+            <div id="modal27" class="modal">
                 <div class="modal-content">
                     <img class="modal-image" src="images/27.jpg">
                 </div>
             </div>
-            <div id="modal28" class="modal modal-fixed-footer">
+            <div id="modal28" class="modal">
                 <div class="modal-content">
                     <img class="modal-image" src="images/28.jpg">
                 </div>
             </div>
-            <div id="modal29" class="modal modal-fixed-footer">
+            <div id="modal29" class="modal">
                 <div class="modal-content">
                     <img class="modal-image" src="images/29.jpg">
                 </div>
             </div>
-            <div id="modal30" class="modal modal-fixed-footer">
+            <div id="modal30" class="modal">
                 <div class="modal-content">
                     <img class="modal-image" src="images/30.jpg">
                 </div>
             </div>
-            <div id="modal31" class="modal modal-fixed-footer">
+            <div id="modal31" class="modal">
                 <div class="modal-content">
                     <img class="modal-image" src="images/31.jpg">
                 </div>
             </div>
-            <div id="modal32" class="modal modal-fixed-footer">
+            <div id="modal32" class="modal">
                 <div class="modal-content">
                     <img class="modal-image" src="images/32.jpg">
                 </div>
             </div>
-            <div id="modal33" class="modal modal-fixed-footer">
+            <div id="modal33" class="modal">
                 <div class="modal-content">
                     <img class="modal-image" src="images/33.jpg">
                 </div>
             </div>
-            <div id="modal34" class="modal modal-fixed-footer">
+            <div id="modal34" class="modal">
                 <div class="modal-content">
                     <img class="modal-image" src="images/34.jpg">
                 </div>
             </div>
-            <div id="modal35" class="modal modal-fixed-footer">
+            <div id="modal35" class="modal">
                 <div class="modal-content">
                     <img class="modal-image" src="images/35.jpg">
                 </div>
             </div>
-            <div id="modal36" class="modal modal-fixed-footer">
+            <div id="modal36" class="modal">
                 <div class="modal-content">
                     <img class="modal-image" src="images/36.jpg">
                 </div>
             </div>
-            <div id="modal37" class="modal modal-fixed-footer">
+            <div id="modal37" class="modal">
                 <div class="modal-content">
                     <img class="modal-image" src="images/37.jpg">
                 </div>
             </div>
-            <div id="modal38" class="modal modal-fixed-footer">
+            <div id="modal38" class="modal">
                 <div class="modal-content">
                     <img class="modal-image" src="images/38.jpg">
                 </div>
             </div>
-            <div id="modal39" class="modal modal-fixed-footer">
+            <div id="modal39" class="modal">
                 <div class="modal-content">
                     <img class="modal-image" src="images/39.jpg">
                 </div>
             </div>
-            <div id="modal40" class="modal modal-fixed-footer">
+            <div id="modal40" class="modal">
                 <div class="modal-content">
                     <img class="modal-image" src="images/40.jpg">
                 </div>
             </div>
-            <div id="modal41" class="modal modal-fixed-footer">
+            <div id="modal41" class="modal">
                 <div class="modal-content">
                     <img class="modal-image" src="images/41.jpg">
                 </div>
