--- a/public/index.html
+++ b/public/index.html
@@ -137,6 +137,8 @@
                     <p style="color: #009cbd;">O: 305.450.0855</p>
                     <p style="color: #009cbd;">M: 305.450.0855</p>
                       <br>
+                    <!-- <a href="mailto:84119thst@gmail.com?subject=testing">Email Liz</a> -->
+                      
                       <!-- <button data-target="modal2" class="btn modal-trigger" style="background-color: #009cbd !important; color: white !important;">Email Liz</button> -->
                         <!-- Modal structure -->
                       <div id="modal2" class="modal modal-fixed-footer">
