working mail from contact form

--- a/public/contactus.html
+++ b/public/contactus.html
@@ -44,7 +44,7 @@
         <div class="panel panel-primary s12 m6">
             <div class="panel-body">
                 <!-- Entry Form -->
-                <form class="col s12 m6" name="registration">
+                <form method="POST" action="send" class="col s12 m6" name="registration">
                     <label for="name" style="font-weight: bolder;">Name</label>
                     <input class="form-control validate" placeholder="Name" name="name" id="name-input" type="text" required>  
                     
