--- a/public/index.html
+++ b/public/index.html
@@ -29,10 +29,10 @@
     </div>
     
     <div class="button-holder row">
-        <a href="gallery.html"><button class="col s4 m4" id="links">Gallery</button></a>
+        <a href="gallery.html"><button id="links">Gallery</button></a>
         <!-- <a href="floorplan.html"><button class="col 3">Floor Plan</button></a> -->
-        <a href="details.html"><button class="col s4 m4" id="links">Details</button></a>
-        <a href="contactus.html"><button class="col s4 m4" id="links">Contact Us</button></a>
+        <a href="details.html"><button id="links">Details</button></a>
+        <a href="contactus.html"><button id="links">Contact Us</button></a>
     </div>
 
     <h3 style="color: #009cbd; text-align: center;">841 19th St, Miami Beach, Florida</h3>
